// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical On Demand T V Page A11y I can see the skip to content link 1`] = `"مطلب ته ورشئ"`;

exports[`Canonical On Demand T V Page Analytics ATI 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" src="https://logws1363.ati-host.net?s=598343&amp;s2=68&amp;p=pashto.bbc_pashto_tv.w172xcldhhrdqgb.page&amp;x1=[urn%3Abbc%3Apips%3Aw13xttn4]&amp;x2=[responsive]&amp;x3=[news-pashto]&amp;x4=[ps]&amp;x7=[player-episode]&amp;x8=[simorgh-nojs]&amp;x9=[%D9%86%DA%93%DB%8D%2520%D8%AF%D8%A7%2520%D9%88%D8%AE%D8%AA%2520-%2520BBC%2520News%2520%D9%BE%DA%9A%D8%AA%D9%88]"/>"`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, پښتو",
  "url": "/pashto",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 2`] = `
{
  "text": "ولې تاسې پر بي بي سي خبرونو باور کولی شئ",
  "url": "https://www.bbc.com/pashto/institutional-49283007",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 3`] = `
{
  "text": "د کارولو شرايط",
  "url": "https://www.bbc.com/pashto/institutional-37620701",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 4`] = `
{
  "text": "د بي بي سي‌ په اړه",
  "url": "https://www.bbc.com/pashto/institutional-37622761",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 5`] = `
{
  "text": "د محرميت تگلاره",
  "url": "https://www.bbc.com/pashto/institutional-37622762",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 7`] = `
{
  "text": "زموږ سره اړیکي",
  "url": "https://www.bbc.co.uk/pashto/send/u50853533",
}
`;

exports[`Canonical On Demand T V Page Footer Anchors should match text and url 8`] = `
{
  "text": "د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical On Demand T V Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pashto"`;

exports[`Canonical On Demand T V Page Footer Paragraphs should match text 1`] = `"© 2024 بي بي سي. بي بي‌ سي‌ د نورو ویبپاڼو د محتوا مسوله نه ده. د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره."`;

exports[`Canonical On Demand T V Page Header I can see the branding 1`] = `"BBC News, پښتو"`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 1`] = `
{
  "text": "کور پاڼه",
  "url": "/pashto",
}
`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 2`] = `
{
  "text": "افغانستان",
  "url": "/pashto/topics/cr50y57xj52t",
}
`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 3`] = `
{
  "text": "پښتونخوا",
  "url": "/pashto/topics/cz74k7wy49jt",
}
`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 4`] = `
{
  "text": "نړۍ",
  "url": "/pashto/topics/cxe2wdp2dv3t",
}
`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 5`] = `
{
  "text": "ښځې",
  "url": "/pashto/topics/cr50y5rq23gt",
}
`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 6`] = `
{
  "text": "لوبې",
  "url": "/pashto/topics/cr50y59q860t",
}
`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 7`] = `
{
  "text": "ويډيوګانې",
  "url": "/pashto/topics/c2m45zyk0mmt",
}
`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 8`] = `
{
  "text": "ځانګړې پاڼې",
  "url": "/pashto/topics/c6pxyz4e0ryt",
}
`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 9`] = `
{
  "text": "کالم",
  "url": "/pashto/topics/cq57nwne9lzt",
}
`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 10`] = `
{
  "text": "پر سټلایت خپرونې",
  "url": "/pashto/articles/c4n55eygdn0o",
}
`;

exports[`Canonical On Demand T V Page Header Navigation link should match text and url 11`] = `
{
  "text": "راډیویي خپرونې",
  "url": "/pashto/topics/c9xz1ekw79nt",
}
`;

exports[`Canonical On Demand T V Page I can see the brand title 1`] = `"نړۍ دا وخت"`;

exports[`Canonical On Demand T V Page I can see the episode summary 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`Canonical On Demand T V Page I can see the episode title 1`] = `"۲۷ می ۲۰۲۰"`;

exports[`Canonical On Demand T V Page Main heading should match text 1`] = `"نړۍ دا وخت, ۲۷ می ۲۰۲۰"`;

exports[`Canonical On Demand T V Page Media Loader a11y assistive technology can read the media player title 1`] = `"Play video, "undefined", موده 24,00"`;

exports[`Canonical On Demand T V Page Media Loader renders a figure caption 1`] = `
<div
  class="bbc-1jvsvcw"
  data-e2e="media-loader__placeholder"
>
  <div
    class="bbc-rmay7 edwq9ck2"
    data-e2e="media-player__guidance"
  >
    <noscript
      class="bbc-17whsh0 edwq9ck0"
    >
      &lt;strong class="bbc-1l7spgt edwq9ck1"&gt;This video cannot play in your browser. Please enable JavaScript or try a different browser.&lt;/strong&gt;
    </noscript>
  </div>
  <button
    class="focusIndicatorRemove bbc-y5mp4k e1ita3o32"
  >
    <span
      class="bbc-m04vo2"
    >
      Play video, "undefined", موده 24,00
    </span>
    <div
      aria-hidden="true"
      class="bbc-1apn3of e1ita3o31"
    >
      <svg
        aria-hidden="true"
        class="bbc-vja2s5 e1s2dgdk5"
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M.5.6h12v12H.5z"
          />
          <path
            d="M2.144.96v11.28l8.712-5.64z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="bbc-11ia5vc e1ita3o30"
      datetime="PT24M"
    >
      24:00
    </time>
  </button>
  <div
    class="bbc-lgx6cw"
    style="padding-bottom:0;overflow:hidden"
  >
    <img
      alt=""
      class="bbc-ipdj63"
      src="https://ichef.bbci.co.uk/images/ic/$recipe/p08b23c8.png"
      srcset="https://ichef.bbci.co.uk/images/ic/240xn/p08b23c8.png.webp 240w, https://ichef.bbci.co.uk/images/ic/320xn/p08b23c8.png.webp 320w, https://ichef.bbci.co.uk/images/ic/480xn/p08b23c8.png.webp 480w, https://ichef.bbci.co.uk/images/ic/624xn/p08b23c8.png.webp 624w, https://ichef.bbci.co.uk/images/ic/800xn/p08b23c8.png.webp 800w"
      style="aspect-ratio:auto"
    />
  </div>
</div>
`;

exports[`Canonical On Demand T V Page Media Loader renders a placeholder 1`] = `
<div
  class="bbc-1jvsvcw"
  data-e2e="media-loader__placeholder"
>
  <div
    class="bbc-rmay7 edwq9ck2"
    data-e2e="media-player__guidance"
  >
    <noscript
      class="bbc-17whsh0 edwq9ck0"
    >
      &lt;strong class="bbc-1l7spgt edwq9ck1"&gt;This video cannot play in your browser. Please enable JavaScript or try a different browser.&lt;/strong&gt;
    </noscript>
  </div>
  <button
    class="focusIndicatorRemove bbc-y5mp4k e1ita3o32"
  >
    <span
      class="bbc-m04vo2"
    >
      Play video, "undefined", موده 24,00
    </span>
    <div
      aria-hidden="true"
      class="bbc-1apn3of e1ita3o31"
    >
      <svg
        aria-hidden="true"
        class="bbc-vja2s5 e1s2dgdk5"
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M.5.6h12v12H.5z"
          />
          <path
            d="M2.144.96v11.28l8.712-5.64z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="bbc-11ia5vc e1ita3o30"
      datetime="PT24M"
    >
      24:00
    </time>
  </button>
  <div
    class="bbc-lgx6cw"
    style="padding-bottom:0;overflow:hidden"
  >
    <img
      alt=""
      class="bbc-ipdj63"
      src="https://ichef.bbci.co.uk/images/ic/$recipe/p08b23c8.png"
      srcset="https://ichef.bbci.co.uk/images/ic/240xn/p08b23c8.png.webp 240w, https://ichef.bbci.co.uk/images/ic/320xn/p08b23c8.png.webp 320w, https://ichef.bbci.co.uk/images/ic/480xn/p08b23c8.png.webp 480w, https://ichef.bbci.co.uk/images/ic/624xn/p08b23c8.png.webp 624w, https://ichef.bbci.co.uk/images/ic/800xn/p08b23c8.png.webp 800w"
      style="aspect-ratio:auto"
    />
  </div>
</div>
`;

exports[`Canonical On Demand T V Page Media Loader renders a valid container 1`] = `
<figure
  class="bbc-epqi9g"
  data-e2e="media-loader__container"
>
  <div
    class="bbc-1jvsvcw"
    data-e2e="media-loader__placeholder"
  >
    <div
      class="bbc-rmay7 edwq9ck2"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="bbc-17whsh0 edwq9ck0"
      >
        &lt;strong class="bbc-1l7spgt edwq9ck1"&gt;This video cannot play in your browser. Please enable JavaScript or try a different browser.&lt;/strong&gt;
      </noscript>
    </div>
    <button
      class="focusIndicatorRemove bbc-y5mp4k e1ita3o32"
    >
      <span
        class="bbc-m04vo2"
      >
        Play video, "undefined", موده 24,00
      </span>
      <div
        aria-hidden="true"
        class="bbc-1apn3of e1ita3o31"
      >
        <svg
          aria-hidden="true"
          class="bbc-vja2s5 e1s2dgdk5"
          focusable="false"
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M.5.6h12v12H.5z"
            />
            <path
              d="M2.144.96v11.28l8.712-5.64z"
              fill="currentColor"
            />
          </g>
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="bbc-11ia5vc e1ita3o30"
        datetime="PT24M"
      >
        24:00
      </time>
    </button>
    <div
      class="bbc-lgx6cw"
      style="padding-bottom:0;overflow:hidden"
    >
      <img
        alt=""
        class="bbc-ipdj63"
        src="https://ichef.bbci.co.uk/images/ic/$recipe/p08b23c8.png"
        srcset="https://ichef.bbci.co.uk/images/ic/240xn/p08b23c8.png.webp 240w, https://ichef.bbci.co.uk/images/ic/320xn/p08b23c8.png.webp 320w, https://ichef.bbci.co.uk/images/ic/480xn/p08b23c8.png.webp 480w, https://ichef.bbci.co.uk/images/ic/624xn/p08b23c8.png.webp 624w, https://ichef.bbci.co.uk/images/ic/800xn/p08b23c8.png.webp 800w"
        style="aspect-ratio:auto"
      />
    </div>
  </div>
</figure>
`;

exports[`Canonical On Demand T V Page Recent Episodes List items should match text and url 1`] = `
{
  "text": "۲۶:۰۰ویډیو, نړۍ دا وخت, ۸ ډیسمبر ۲۰۲۰, موده ۲۶،۰۰",
  "url": "/pashto/bbc_pashto_tv/tv/w172xclqp0l3zkq",
}
`;

exports[`Canonical On Demand T V Page Recent Episodes List items should match text and url 2`] = `
{
  "text": "۲۶:۰۰ویډیو, نړۍ دا وخت, ۷ ډیسمبر ۲۰۲۰, موده ۲۶،۰۰",
  "url": "/pashto/bbc_pashto_tv/tv/w172xclqp0l12nm",
}
`;

exports[`Canonical On Demand T V Page Recent Episodes List items should match text and url 3`] = `
{
  "text": "۲۶:۰۰ویډیو, نړۍ دا وخت, ۶ ډیسمبر ۲۰۲۰, موده ۲۶،۰۰",
  "url": "/pashto/bbc_pashto_tv/tv/w172xclq9r8tbhc",
}
`;

exports[`Canonical On Demand T V Page Recent Episodes List items should match text and url 4`] = `
{
  "text": "۲۶:۰۰ویډیو, نړۍ دا وخت, ۵ ډیسمبر ۲۰۲۰, موده ۲۶،۰۰",
  "url": "/pashto/bbc_pashto_tv/tv/w172xclq9r8qfl8",
}
`;

exports[`Canonical On Demand T V Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/pashto/images/icons/icon-192x192.png",
}
`;

exports[`Canonical On Demand T V Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-72x72.png",
}
`;

exports[`Canonical On Demand T V Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-96x96.png",
}
`;

exports[`Canonical On Demand T V Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-128x128.png",
}
`;

exports[`Canonical On Demand T V Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-144x144.png",
}
`;

exports[`Canonical On Demand T V Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-152x152.png",
}
`;

exports[`Canonical On Demand T V Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-180x180.png",
}
`;

exports[`Canonical On Demand T V Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-192x192.png",
}
`;

exports[`Canonical On Demand T V Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-384x384.png",
}
`;

exports[`Canonical On Demand T V Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-512x512.png",
}
`;

exports[`Canonical On Demand T V Page SEO Canonical link 1`] = `"http://localhost:7080/pashto/bbc_pashto_tv/tv_programmes/w13xttn4"`;

exports[`Canonical On Demand T V Page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical On Demand T V Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical On Demand T V Page SEO Heading level 1 1`] = `"نړۍ دا وخت, ۲۷ می ۲۰۲۰"`;

exports[`Canonical On Demand T V Page SEO Lang attribute 1`] = `"ps"`;

exports[`Canonical On Demand T V Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ps",
        "name": "Pashto",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/pashto/bbc_pashto_tv/tv_programmes/w13xttn4",
        "@type": "WebPage",
        "name": "نړۍ دا وخت",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
          "width": 1024,
        },
        "name": "BBC News پښتو",
        "publishingPrinciples": "https://www.bbc.com/pashto/institutional-49283007",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
      "url": "http://localhost:7080/pashto/bbc_pashto_tv/tv_programmes/w13xttn4",
    },
    {
      "@type": "VideoObject",
      "description": "د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ.",
      "duration": "PT24M",
      "embedURL": "https://www.test.bbc.com/ws/av-embeds/media/pashto/bbc_pashto_tv/w172xcldhhrdqgb/ps?morph_env=live",
      "name": "نړۍ دا وخت",
      "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p08b23c8.png",
      "uploadDate": "2020-05-27T00:00:00.000Z",
    },
  ],
}
`;

exports[`Canonical On Demand T V Page SEO OG description 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`Canonical On Demand T V Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"`;

exports[`Canonical On Demand T V Page SEO OG image alt 1`] = `"BBC News پښتو"`;

exports[`Canonical On Demand T V Page SEO OG locale 1`] = `"ps"`;

exports[`Canonical On Demand T V Page SEO OG site name 1`] = `"BBC News پښتو"`;

exports[`Canonical On Demand T V Page SEO OG title 1`] = `"نړۍ دا وخت - BBC News پښتو"`;

exports[`Canonical On Demand T V Page SEO OG type 1`] = `"website"`;

exports[`Canonical On Demand T V Page SEO OG url 1`] = `"http://localhost:7080/pashto/bbc_pashto_tv/tv_programmes/w13xttn4"`;

exports[`Canonical On Demand T V Page SEO Page title 1`] = `"نړۍ دا وخت - BBC News پښتو"`;

exports[`Canonical On Demand T V Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical On Demand T V Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical On Demand T V Page SEO Twitter creator 1`] = `"@bbcpashto"`;

exports[`Canonical On Demand T V Page SEO Twitter description 1`] = `"د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ."`;

exports[`Canonical On Demand T V Page SEO Twitter image alt 1`] = `"BBC News پښتو"`;

exports[`Canonical On Demand T V Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"`;

exports[`Canonical On Demand T V Page SEO Twitter site 1`] = `"@bbcpashto"`;

exports[`Canonical On Demand T V Page SEO Twitter title 1`] = `"نړۍ دا وخت - BBC News پښتو"`;

exports[`Canonical On Demand T V Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"نړۍ دا وخت, ۲۷ می ۲۰۲۰"`;
